Create header components

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   />
   <body>
     <nav>
-      <a href="#welcome" id="welcome">Welcome</a>
+      <a href="#" id="my-logo">My Logo</a>
       <a title="menu" href="#" id="hamburger-menu">
         <i class="fa fa-bars"></i>
       </a>
