Add some new features with the reviews of my reviewer

--- a/index.html
+++ b/index.html
@@ -18,44 +18,37 @@
     />
   </head>
   <body>
-    <nav>
+    <header>
       <a href="#" id="my-logo">My Logo</a>
       <a title="menu" href="#" id="hamburger-menu">
         <i class="fa fa-bars"></i>
       </a>
-    </nav>
+    </header>
     <section>
-      <h2 id="first-section">I’m Mariane Glad to see you!</h2>
+      <h1 id="first-section">I’m Tacettin Glad to see you!</h1>
       <p id="second-section">
         I’m a software developer! I can help you build a product , feature or
         website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <p id="connect">LET’S CONNECT</p>
+      <a href="#" id="linking"><p id="connect">LET’S CONNECT</p></a>
       <div id="social-media">
-        <img src="./utils/Vector.svg" alt="elipse" id="twitter" />
-        <img src="./utils/Vector.png" alt="elipse" id="linkedin" />
-        <img src="./utils/Vector1.png" alt="elipse" id="linkedin1" />
-        <img src="./utils/Vector2.png" alt="elipse" id="linkedin2" />
-        <img src="./utils/Vector1.svg" alt="elipse" id="medium" />
-        <img src="./utils/Vector2.svg" alt="elipse" id="github" />
-        <img src="./utils/Vector3.svg" alt="elipse" id="angel" />
+        <a href="#"
+          ><img src="./utils/Vector.svg" alt="twitter" id="twitter"
+        /></a>
+        <a href="#"
+          ><img src="./utils/Linkedin-icon.svg" alt="linkedin" id="linkedin"
+        /></a>
+        <a href="#"
+          ><img src="./utils/Vector1.svg" alt="elipse" id="medium"
+        /></a>
+        <a href="#"
+          ><img src="./utils/Vector2.svg" alt="elipse" id="github"
+        /></a>
+        <a href="#"
+          ><img src="./utils/Vector3.svg" alt="elipse" id="angel"
+        /></a>
       </div>
     </section>
-    <figure>
-      <img src="./utils/Ellipse8.svg" alt="elipse" id="ellipse" />
-      <img src="./utils/Rectangle6.png" alt="rectangle" id="rectangle" />
-      <img src="./utils/Ellipse11.png" alt="rectangle" id="ellipse11" />
-      <img src="./utils/Rectangle7.png" alt="rectangle" id="rectangle7" />
-      <img src="./utils/Ellipse5.png" alt="rectangle" id="ellipse5" />
-      <img src="./utils/Rectangle4.png" alt="rectangle" id="rectangle4" />
-      <img src="./utils/Ellipse3.svg" alt="rectangle" id="ellipse3" />
-      <img src="./utils/Ellipse14.png" alt="rectangle" id="ellipse14" />
-      <img src="./utils/Ellipse12.png" alt="rectangle" id="ellipse12" />
-      <img src="./utils/Ellipse13.png" alt="rectangle" id="ellipse13" />
-      <img src="./utils/Ellipse4.png" alt="rectangle" id="ellipse4" />
-      <img src="./utils/Rectangle5.png" alt="rectangle" id="rectangle5" />
-      <img src="./utils/Ellipse15.png" alt="rectangle" id="ellipse15" />
-    </figure>
   </body>
 </html>
