--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   <body>
     <header>
       <a href="#" id="my-logo">My Logo</a>
-      <a title="menu" href="#" id="hamburger-menu">
-        <i class="fa fa-bars"></i>
-      </a>
+      <nav>
+        <a title="menu" href="#" id="hamburger-menu">
+          <i class="fa fa-bars"></i>
+        </a>
+      </nav>
     </header>
     <section>
       <h1 id="first-section">I’m Tacettin Glad to see you!</h1>
@@ -31,24 +33,34 @@
         website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hestiate to contact me.
       </p>
-      <a href="#" id="linking"><p id="connect">LET’S CONNECT</p></a>
-      <div id="social-media">
-        <a href="#"
-          ><img src="./utils/Vector.svg" alt="twitter" id="twitter"
-        /></a>
-        <a href="#"
-          ><img src="./utils/Linkedin-icon.svg" alt="linkedin" id="linkedin"
-        /></a>
-        <a href="#"
-          ><img src="./utils/Vector1.svg" alt="elipse" id="medium"
-        /></a>
-        <a href="#"
-          ><img src="./utils/Vector2.svg" alt="elipse" id="github"
-        /></a>
-        <a href="#"
-          ><img src="./utils/Vector3.svg" alt="elipse" id="angel"
-        /></a>
-      </div>
+      <a href="#" id="link"><p id="connect">LET’S CONNECT</p></a>
+      <ul id="social-media">
+        <li>
+          <a href="#"
+            ><img src="./utils/Vector.svg" alt="twitter" id="twitter"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./utils/Linkedin-icon.svg" alt="linkedin" id="linkedin"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./utils/Vector1.svg" alt="elipse" id="medium"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./utils/Vector2.svg" alt="elipse" id="github"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img src="./utils/Vector3.svg" alt="elipse" id="angel"
+          /></a>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
