--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p id="second-section">
         I’m a software developer! I can help you build a product , feature or
         website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don’t hestiate to contact me.
+        you see and have a project you need coded, don’t hesitate to contact me.
       </p>
       <a href="#" id="link"><p id="connect">LET’S CONNECT</p></a>
       <ul id="social-media">
