--- a/index.html
+++ b/index.html
@@ -26,40 +26,271 @@
         </a>
       </nav>
     </header>
-    <section>
-      <h1 id="first-section">I’m Tacettin Glad to see you!</h1>
-      <p id="second-section">
+    <section id="front-section">
+      <h1 id="first-subsection">I’m Tacettin Glad to see you!</h1>
+      <p id="second-subsection">
         I’m a software developer! I can help you build a product , feature or
         website Look through some of my work and experience! If you like what
         you see and have a project you need coded, don’t hesitate to contact me.
       </p>
-      <a href="#" id="link"><p id="connect">LET’S CONNECT</p></a>
-      <ul id="social-media">
+      <a href="#" class="link"><p class="connect">LET’S CONNECT</p></a>
+      <ul class="social-media">
         <li>
           <a href="#"
-            ><img src="./utils/Vector.svg" alt="twitter" id="twitter"
+            ><img src="./utils/Vector.svg" alt="twitter" class="twitter"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="./utils/Linkedin-icon.svg" alt="linkedin" id="linkedin"
+            ><img
+              src="./utils/Linkedin-icon.svg"
+              alt="linkedin"
+              class="linkedin"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="./utils/Vector1.svg" alt="elipse" id="medium"
+            ><img src="./utils/Vector1.svg" alt="elipse" class="medium"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="./utils/Vector2.svg" alt="elipse" id="github"
+            ><img src="./utils/Vector2.svg" alt="elipse" class="github"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="./utils/Vector3.svg" alt="elipse" id="angel"
+            ><img src="./utils/Vector3.svg" alt="elipse" class="angel"
           /></a>
         </li>
+      </ul>
+    </section>
+    <section id="works">
+      <figure class="cards">
+        <div id="snapshot1"></div>
+        <div class="card-header">
+          <h2 class="card-heading">Tonic</h2>
+          <ul class="card-list">
+            <li class="item client">CANOPY</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item role">Back End Dev</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item year">2015</li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <p class="card-main">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="language-list">
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">html</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">css</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">javaScript</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="card-button">See Project</button>
+        </div>
+      </figure>
+      <figure class="cards">
+        <div id="snapshot2"></div>
+        <div class="card-header">
+          <h2 class="card-heading">Multi-Post Stories</h2>
+          <ul class="card-list">
+            <li class="item client">CANOPY</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item role">Back End Dev</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item year">2015</li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <p class="card-main">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="language-list">
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">html</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">css</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">javaScript</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="card-button">See Project</button>
+        </div>
+      </figure>
+      <figure class="cards">
+        <div id="snapshot3"></div>
+        <div class="card-header">
+          <h2 class="card-heading">Tonic</h2>
+          <ul class="card-list">
+            <li class="item client">CANOPY</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item role">Back End Dev</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item year">2015</li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <p class="card-main">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="language-list">
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">html</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">css</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">javaScript</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="card-button">See Project</button>
+        </div>
+      </figure>
+      <figure class="cards">
+        <div id="snapshot4"></div>
+        <div class="card-header">
+          <h2 class="card-heading">Multi-Post Stories</h2>
+          <ul class="card-list">
+            <li class="item client">CANOPY</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item role">Back End Dev</li>
+            <li class="circle">
+              <img src="./utils/Counter.svg" alt="circle" />
+            </li>
+            <li class="item year">2015</li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <p class="card-main">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </p>
+          <ul class="language-list">
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">html</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">css</p>
+              </div>
+            </li>
+            <li class="language-item">
+              <div class="language-container">
+                <p class="language-text">javaScript</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="card-button">See Project</button>
+        </div>
+      </figure>
+    </section>
+    <section id="about-me">
+      <div class="intro-about">
+        <h2 class="about-header">About<br />Myself</h2>
+        <p class="about-text">
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hesitate to
+          contact me.
+        </p>
+        <a href="#" class="link" id="second-link"
+          ><p class="connect">LET’S CONNECT</p></a
+        >
+        <ul class="social-media" id="second-social-media">
+          <li>
+            <a href="#"
+              ><img src="./utils/Vector.svg" alt="twitter" class="twitter"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="./utils/Linkedin-icon.svg"
+                alt="linkedin"
+                class="linkedin"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./utils/Vector1.svg" alt="elipse" class="medium"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./utils/Vector2.svg" alt="elipse" class="github"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./utils/Vector3.svg" alt="elipse" class="angel"
+            /></a>
+          </li>
+        </ul>
+        <div class="card-footer">
+          <button type="button" class="card-button" id="about-button">Get my resume</button>
+        </div>
+      </div>
+    </section>
+    <section class="dropdown-menu">
+      <ul class="base-list">
+        <li id="list-item languages">Languages <i class="fas fa-chevron-right"></i></li>
+        <li id="list-item frameworks">Frameworks</li>
+        <li id="list-item skills">Skills</li>
       </ul>
     </section>
   </body>
