--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       crossorigin="anonymous"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -282,15 +289,63 @@
           </li>
         </ul>
         <div class="card-footer">
-          <button type="button" class="card-button" id="about-button">Get my resume</button>
+          <button type="button" class="card-button" id="about-button">
+            Get my resume
+          </button>
         </div>
       </div>
     </section>
     <section class="dropdown-menu">
       <ul class="base-list">
-        <li id="list-item languages">Languages <i class="fas fa-chevron-right"></i></li>
-        <li id="list-item frameworks">Frameworks</li>
-        <li id="list-item skills">Skills</li>
+        <li class="list-item" id="languages">
+          <div class="list-item-inserted">
+            Languages <i class="fas fa-chevron-right fa-rotate-90"></i>
+          </div>
+          <div>
+            <ul class="language-lists">
+              <li class="language-item-in">
+                <div class="language-list-container">
+                  <img
+                    src="./utils/js.svg"
+                    alt="javascript"
+                    class="language-item-logo"
+                  />
+                  <p class="language-item-text">JavaScript</p>
+                </div>
+              </li>
+              <li class="language-item-in">
+                <div class="language-list-container">
+                  <img
+                    src="./utils/html.svg"
+                    alt="javascript"
+                    class="language-item-logo"
+                  />
+                  <p class="language-item-text">HTML</p>
+                </div>
+              </li>
+              <li class="language-item-in">
+                <div class="language-list-container">
+                  <img
+                    src="./utils/css.svg"
+                    alt="javascript"
+                    class="language-item-logo"
+                  />
+                  <p class="language-item-text">CSS</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li class="list-item" id="frameworks">
+          <div class="list-item-inserted">
+            Frameworks <i class="fas fa-chevron-right"></i>
+          </div>
+        </li>
+        <li class="list-item" id="skills">
+          <div class="list-item-inserted">
+            Skills <i class="fas fa-chevron-right"></i>
+          </div>
+        </li>
       </ul>
     </section>
   </body>
