Fix about me layout

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </ul>
     </section>
     <section id="works">
-      <figure class="cards">
+      <figure id="first-card-item" class="cards">
         <div id="snapshot1"></div>
         <div class="card-header">
           <h2 class="card-heading">Tonic</h2>
@@ -295,7 +295,7 @@
         </div>
       </div>
     </section>
-    <section class="dropdown-menu">
+    <section id="dropdown-menu">
       <ul class="base-list">
         <li class="list-item" id="languages">
           <div class="list-item-inserted">
