Use ul and li tags to group cards

--- a/index.html
+++ b/index.html
@@ -73,178 +73,182 @@
       </ul>
     </section>
     <section id="works">
-      <figure id="first-card-item" class="cards">
-        <div id="snapshot1"></div>
-        <div class="card-header">
-          <h2 class="card-heading">Tonic</h2>
-          <ul class="card-list">
-            <li class="item client">CANOPY</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item role">Back End Dev</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item year">2015</li>
-          </ul>
-        </div>
-        <div class="card-body">
-          <p class="card-main">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
-          <ul class="language-list">
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">html</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">css</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">javaScript</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button type="button" class="card-button">See Project</button>
-        </div>
-      </figure>
-      <figure class="cards">
-        <div id="snapshot2"></div>
-        <div class="card-header">
-          <h2 class="card-heading">Multi-Post Stories</h2>
-          <ul class="card-list">
-            <li class="item client">CANOPY</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item role">Back End Dev</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item year">2015</li>
-          </ul>
-        </div>
-        <div class="card-body">
-          <p class="card-main">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
-          <ul class="language-list">
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">html</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">css</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">javaScript</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button type="button" class="card-button">See Project</button>
-        </div>
-      </figure>
-      <figure class="cards">
-        <div id="snapshot3"></div>
-        <div class="card-header">
-          <h2 class="card-heading">Tonic</h2>
-          <ul class="card-list">
-            <li class="item client">CANOPY</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item role">Back End Dev</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item year">2015</li>
-          </ul>
-        </div>
-        <div class="card-body">
-          <p class="card-main">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
-          <ul class="language-list">
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">html</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">css</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">javaScript</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button type="button" class="card-button">See Project</button>
-        </div>
-      </figure>
-      <figure class="cards">
-        <div id="snapshot4"></div>
-        <div class="card-header">
-          <h2 class="card-heading">Multi-Post Stories</h2>
-          <ul class="card-list">
-            <li class="item client">CANOPY</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item role">Back End Dev</li>
-            <li class="circle">
-              <img src="./utils/Counter.svg" alt="circle" />
-            </li>
-            <li class="item year">2015</li>
-          </ul>
-        </div>
-        <div class="card-body">
-          <p class="card-main">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </p>
-          <ul class="language-list">
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">html</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">css</p>
-              </div>
-            </li>
-            <li class="language-item">
-              <div class="language-container">
-                <p class="language-text">javaScript</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button type="button" class="card-button">See Project</button>
-        </div>
-      </figure>
+      <div >
+        <ul>
+          <li id="first-card-item" class="cards">
+            <div id="snapshot1"></div>
+            <div class="card-header">
+              <h2 class="card-heading">Tonic</h2>
+              <ul class="card-list">
+                <li class="item client">CANOPY</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item role">Back End Dev</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item year">2015</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <p class="card-main">
+                A daily selection of privately personalized reads; no accounts
+                or sign-ups required.
+              </p>
+              <ul class="language-list">
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">html</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">css</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">javaScript</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button type="button" class="card-button">See Project</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div id="snapshot2"></div>
+            <div class="card-header">
+              <h2 class="card-heading">Multi-Post Stories</h2>
+              <ul class="card-list">
+                <li class="item client">CANOPY</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item role">Back End Dev</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item year">2015</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <p class="card-main">
+                A daily selection of privately personalized reads; no accounts
+                or sign-ups required.
+              </p>
+              <ul class="language-list">
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">html</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">css</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">javaScript</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button type="button" class="card-button">See Project</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div id="snapshot3"></div>
+            <div class="card-header">
+              <h2 class="card-heading">Tonic</h2>
+              <ul class="card-list">
+                <li class="item client">CANOPY</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item role">Back End Dev</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item year">2015</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <p class="card-main">
+                A daily selection of privately personalized reads; no accounts
+                or sign-ups required.
+              </p>
+              <ul class="language-list">
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">html</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">css</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">javaScript</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button type="button" class="card-button">See Project</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div id="snapshot4"></div>
+            <div class="card-header">
+              <h2 class="card-heading">Multi-Post Stories</h2>
+              <ul class="card-list">
+                <li class="item client">CANOPY</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item role">Back End Dev</li>
+                <li class="circle">
+                  <img src="./utils/Counter.svg" alt="circle" />
+                </li>
+                <li class="item year">2015</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <p class="card-main">
+                A daily selection of privately personalized reads; no accounts
+                or sign-ups required.
+              </p>
+              <ul class="language-list">
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">html</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">css</p>
+                  </div>
+                </li>
+                <li class="language-item">
+                  <div class="language-container">
+                    <p class="language-text">javaScript</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="card-footer">
+              <button type="button" class="card-button">See Project</button>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
     <section id="about-me">
       <div class="intro-about">
