List languages with ul and li tags

--- a/index.html
+++ b/index.html
@@ -307,35 +307,29 @@
           </div>
           <div>
             <ul class="language-lists">
-              <li class="language-item-in">
-                <div class="language-list-container">
+              <li class="language-item-in language-list-container">
                   <img
                     src="./utils/js.svg"
                     alt="javascript"
                     class="language-item-logo"
                   />
                   <p class="language-item-text">JavaScript</p>
-                </div>
               </li>
-              <li class="language-item-in">
-                <div class="language-list-container">
+              <li class="language-item-in language-list-container">
                   <img
                     src="./utils/html.svg"
                     alt="javascript"
                     class="language-item-logo"
                   />
                   <p class="language-item-text">HTML</p>
-                </div>
               </li>
-              <li class="language-item-in">
-                <div class="language-list-container">
+              <li class="language-item-in language-list-container">
                   <img
                     src="./utils/css.svg"
                     alt="javascript"
                     class="language-item-logo"
                   />
                   <p class="language-item-text">CSS</p>
-                </div>
               </li>
             </ul>
           </div>
