Add footer contacts

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </ul>
     </section>
     <section id="works">
-      <div >
+      <div>
         <ul>
           <li id="first-card-item" class="cards">
             <div id="snapshot1"></div>
@@ -308,28 +308,28 @@
           <div>
             <ul class="language-lists">
               <li class="language-item-in language-list-container">
-                  <img
-                    src="./utils/js.svg"
-                    alt="javascript"
-                    class="language-item-logo"
-                  />
-                  <p class="language-item-text">JavaScript</p>
+                <img
+                  src="./utils/js.svg"
+                  alt="javascript"
+                  class="language-item-logo"
+                />
+                <p class="language-item-text">JavaScript</p>
               </li>
               <li class="language-item-in language-list-container">
-                  <img
-                    src="./utils/html.svg"
-                    alt="javascript"
-                    class="language-item-logo"
-                  />
-                  <p class="language-item-text">HTML</p>
+                <img
+                  src="./utils/html.svg"
+                  alt="javascript"
+                  class="language-item-logo"
+                />
+                <p class="language-item-text">HTML</p>
               </li>
               <li class="language-item-in language-list-container">
-                  <img
-                    src="./utils/css.svg"
-                    alt="javascript"
-                    class="language-item-logo"
-                  />
-                  <p class="language-item-text">CSS</p>
+                <img
+                  src="./utils/css.svg"
+                  alt="javascript"
+                  class="language-item-logo"
+                />
+                <p class="language-item-text">CSS</p>
               </li>
             </ul>
           </div>
@@ -346,5 +346,34 @@
         </li>
       </ul>
     </section>
+    <footer class="footer">
+      <div class="layer"></div>
+      <div class="contact-me-first">
+        <h2 class="contact-me-header">Contact me</h2>
+        <p class="contact-me-text">
+          If you have an application you are interested in developing, a feature
+          that you need built or a project that needs coding. I’d love to help
+          with it
+        </p>
+      </div>
+      <div class="form-container">
+        <form>
+          <ul class="form-list">
+            <li>
+              <input type="text" id="fname" name="fname" value="Yeremias"/>
+            </li>
+            <li>
+              <input type="email" id="email" name="email" value="natajayanj14>gmail.com"/>
+            </li>
+            <li>
+              <textarea name="message" rows="10" cols="30">Write your message here</textarea>
+            </li>
+            <li>
+              <input type="button" value="Get It Touch" />
+            </li>
+          </ul>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
