--- a/index.html
+++ b/index.html
@@ -357,19 +357,36 @@
         </p>
       </div>
       <div class="form-container">
-        <form action="https://formspree.io/f/{form_id}" method="post">
+        <form action="https://formspree.io/f/#" method="post">
           <ul class="form-list">
             <li>
-              <input type="text" class="fname" name="fname" placeholder="Yeremias" maxlength="30" required/>
+              <input
+                type="text"
+                class="fname"
+                name="fname"
+                placeholder="Yeremias"
+                maxlength="30"
+                required
+              />
             </li>
             <li>
-              <input type="email" class="fname" name="email" placeholder="natajayanj14>gmail.com" required/>
+              <input
+                type="email"
+                class="fname"
+                name="email"
+                placeholder="natajayanj14>gmail.com"
+                required
+              />
             </li>
             <li>
-              <textarea name="message" maxlength="500" required>Write your message here</textarea>
+              <textarea name="message" maxlength="500" required>
+Write your message here</textarea
+              >
             </li>
             <li>
-              <button type="submit" class="contact-me-button">Get It Touch</button>
+              <button type="submit" class="contact-me-button">
+                Get It Touch
+              </button>
             </li>
           </ul>
         </form>
