--- a/index.html
+++ b/index.html
@@ -379,9 +379,12 @@
               />
             </li>
             <li>
-              <textarea name="message" maxlength="500" required>
-Write your message here</textarea
-              >
+              <textarea
+                name="message"
+                maxlength="500"
+                placeholder="Write your message here"
+                required
+              ></textarea>
             </li>
             <li>
               <button type="submit" class="contact-me-button">
