Remove unnecessary ul and li tags

--- a/index.html
+++ b/index.html
@@ -357,41 +357,36 @@
         </p>
       </div>
       <div class="form-container">
-        <form action="https://formspree.io/f/mdoyznbe" method="post">
-          <ul class="form-list">
-            <li>
-              <input
-                type="text"
-                class="fname"
-                name="fname"
-                placeholder="Yeremias"
-                maxlength="30"
-                required
-              />
-            </li>
-            <li>
-              <input
-                type="email"
-                class="fname"
-                name="email"
-                placeholder="natajayanj14>gmail.com"
-                required
-              />
-            </li>
-            <li>
-              <textarea
-                name="message"
-                maxlength="500"
-                placeholder="Write your message here"
-                required
-              ></textarea>
-            </li>
-            <li>
-              <button type="submit" class="contact-me-button">
-                Get It Touch
-              </button>
-            </li>
-          </ul>
+        <form
+          action="https://formspree.io/f/mdoyznbe"
+          method="post"
+          class="form-list"
+        >
+          <input
+            type="text"
+            class="fname"
+            name="fname"
+            placeholder="Yeremias"
+            maxlength="30"
+            required
+          />
+
+          <input
+            type="email"
+            class="fname"
+            name="email"
+            placeholder="natajayanj14>gmail.com"
+            required
+          />
+
+          <textarea
+            name="message"
+            maxlength="500"
+            placeholder="Write your message here"
+            required
+          ></textarea>
+
+          <button type="submit" class="contact-me-button">Get It Touch</button>
         </form>
       </div>
     </footer>
