Fix e-mail input

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             type="text"
             class="fname"
             name="fname"
-            placeholder="Yeremias"
+            placeholder="Name-Surname"
             maxlength="30"
             required
           />
@@ -375,7 +375,8 @@
             type="email"
             class="fname"
             name="email"
-            placeholder="natajayanj14>gmail.com"
+            placeholder="E-mail"
+            id="email-input"
             required
           />
 
