Create navbar section of portfolio webpage

--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
   </head>
   <body>
     <header>
-      <div class="logo-heading">
-        <a href="#" id="my-logo">My Logo</a>
-        <nav>
-          <a title="menu" href="#" id="hamburger-menu">
-            <i class="fa fa-bars"></i>
-          </a>
-        </nav>
-      </div>
-      <div id="front-section">
-        <h1 id="first-subsection">I’m Tacettin Glad to see you!</h1>
-        <p id="second-subsection">
+      <nav>
+        <div class="logo-heading">
+          <a href="#" class="my-logo">My Logo</a>
+        </div>
+        <a title="menu" href="#" class="hamburger-menu">
+          <i class="fa fa-bars"></i>
+        </a>
+        <div class="nav-menu">
+          <a title="portfolio" href="#" class="nav-menu-link">Portfolio</a>
+          <a title="about" href="#" class="nav-menu-link">About</a>
+          <a title="contact" href="#" class="nav-menu-link">Contact</a>
+        </div>
+      </nav>
+
+      <div class="front-section">
+        <h1 class="first-subsection">I’m Tacettin Glad to see you!</h1>
+        <p class="second-subsection">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
           you see and have a project you need coded, don’t hesitate to contact
