--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
 
       <div class="front-section">
-        <h1 class="first-subsection">I’m Tacettin Glad to see you!</h1>
+        <h1 class="first-subsection">I’m Tacettin<br/> Glad to see you!</h1>
         <p class="second-subsection">
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
